2006-03-23  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fix buildbot

        * JavaScriptCore.xcodeproj/project.pbxproj: Change target name to JavaScriptCore (it was "include"!?).
        Also add -Y 3 option for linker.

2006-03-23  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=7726
          REGRESSION: orbitz calendar fails (JavaScript function serialization/parsing)

        * kjs/object.h: Take function name, as well as source URL and line number, when
        using the special overloaded construct for making functions.
        * kjs/object.cpp: (KJS::JSObject::construct): Ditto.
        * kjs/function_object.h: Ditto.
        * kjs/function_object.cpp: (FunctionObjectImp::construct): Pass a name when
        constructing the function rather than null. Use "anonymous" when making a
        function using the default function constructor.

        * kjs/nodes2string.cpp: (FuncDeclNode::streamTo): Put a line break just before
        a function declaration.

        - unrelated fix

        * kxmlcore/HashMapPtrSpec.h: Add missing needed friend declaration.

2006-03-23  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=7805
          LEAK: method name leaks in KJS::Bindings::CInstance::invokeMethod

        * bindings/c/c_utility.h: Remove NPN_UTF16FromString declaration (not implemented).
        * bindings/c/c_utility.cpp:
        (KJS::Bindings::convertValueToNPVariant): Use DOUBLE_TO_NPVARIANT,
        BOOLEAN_TO_NPVARIANT, VOID_TO_NPVARIANT, NULL_TO_NPVARIANT, and
        OBJECT_TO_NPVARIANT. In the case of OBJECT, call _NPN_RetainObject in
        one case and remove a _NPN_ReleaseObject in another because this
        should return a retained value.
        (KJS::Bindings::convertNPVariantToValue): Use NPVARIANT_TO_BOOLEAN,
        NPVARIANT_TO_INT32, and NPVARIANT_TO_DOUBLE.
